# glances

./: .bandit  .cgcignore  .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .tags  .tags_sorted_by_file  .travis.yml  AUTHORS  CLAUDE.md  CODE-OF-CONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  ChangeLog  Changelog  Dockerfile  INSTALL  MANIFEST.in  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.rst  README  README-fr  README-pypi.rst  README.md  README.rst  SECURITY.md  TODO  aclocal.m4  all-requirements.txt  appveyor.yml  autogen.sh  (+50 more)
.ci/appveyor/: README.rst  download_exes.py  install.ps1
.claude/: settings.json
.claude/docs/: architecture.md  commands.md
.claude/skills/: SKILL-actions.md  SKILL-ci-cd.md  SKILL-config.md  SKILL-exporter.md  SKILL-plugin.md  SKILL-rest-api.md  SKILL-scheduler.md  SKILL-security.md  SKILL-webui.md  debug.md  docker.md  lint.md  new-export.md  new-plugin.md  review.md  test.md  webui.md
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_docker.yml  ci.yml  codeql-analysis.yml  cyber.yml  inactive_issues.yml  main.yml  needs_contributor.yml  node.js.yml  quality.yml  test.yml  webui.yml  weekly_merge_develop_to_v5.yml
.reuse/: dep5
app/css/: _carousel.less  _content.less  _navbar.less  _responsive.less  _variables.less  main.less
app/js/: script.js
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
conf/: empty.conf  glances-grafana-flux.json  glances-grafana-influxql.json  glances-grafana.json  glances-monitor.conf  glances-test.conf  glances.conf
conf/fetch-templates/: short.jinja  with-logo.jinja
doc/: init_script
docker-compose/: Dockerfile  docker-compose-with-traefik.yml  docker-compose.yml  glances.conf
docker-files/: Dockerfile  README.md  alpine.Dockerfile  debian.Dockerfile  dev.Dockerfile  docker-logger.json  ubuntu.Dockerfile
docker-files/devel/: Dockerfile
docker-files/devel-alpine/: Dockerfile
docker-files/devel-arm/: Dockerfile
docker-files/master/: Dockerfile
docker/devel/: Dockerfile
docker/master/: Dockerfile
docs/: CONTRIBUTORS.md  Makefile  README.txt  api.rst  build.sh  cmds.rst  conf.py  config.rst  doc-requirements.txt  docker.rst  faq.rst  fetch.rst  glances-doc.html  glances-doc.rst  glances.rst  index.rst  init_script  install.rst  make.bat  objects.inv  openapi.json  quickstart.rst  style.css  stylesheet.css  support.rst
docs/_static/: glances-architecture-v5.excalidraw  glances-architexture.excalidraw  glances-flame.html  glances-pyinstrument.html
docs/_templates/: links.html
docs/aoa/: actions.rst  amps.rst  cloud.rst  connections.rst  containers.rst  cpu.rst  disk.rst  diskio.rst  docker.rst  events.rst  folders.rst  fs.rst  gpu.rst  hddtemp.rst  header.rst  index.rst  irq.rst  load.rst  logs.rst  memory.rst  monitor.rst  mpp.rst  network.rst  npu.rst  ports.rst  ps.rst  quicklook.rst  raid.rst  sensors.rst  smart.rst  vms.rst  wifi.rst
docs/api/: mcp.rst  openapi.json  python.rst  restful.rst
docs/architecture/: glances-v5-architecture-decisions.md  tui-v4-rendering-patterns.md
docs/dev/: README.txt
docs/gw/: cassandra.rst  clickhouse.rst  couchdb.rst  csv.rst  duckdb.rst  elastic.rst  graph.rst  graphite.rst  index.rst  influxdb.rst  json.rst  kafka.rst  mongodb.rst  mqtt.rst  nats.rst  opentsdb.rst  prometheus.rst  rabbitmq.rst  restful.rst  riemann.rst  statsd.rst  timescaledb.rst  zeromq.rst
docs/man/: glances.1
glances/: README.txt  __init__.py  __main__.py  actions.py  alerts_v5.py  amps_list.py  api.py  attribute.py  autodiscover.py  client.py  client_browser.py  compat.py  config.py  config_v5.py  cpu_percent.py  cpu_sampler_v5.py  data_class.py  event.py  events.py  events_list.py  filter.py  folder_list.py  glances.py  globals.py  gpu_percent.py  history.py  jwt_utils.py  keyboard.py  logger.py  logs.py  main.py  main_v5.py  monitor_list.py  outdated.py  password.py  password_list.py  ports_list.py  processes.py  processes_tree.py  programs.py  (+24 more)
glances/actions_v5/: __init__.py  action_base.py
i18n/: glances.pot
m4/: ax_python_module.m4
man/: Makefile.am  glances.1
mcp/: HOWTORUN.md  HOW_TO_TEST_LOCAL.md  README.md  docker-compose.yml  glances_mcp.py  mcp_config.json  setup.sh  test_script.sh
snap/: snapcraft.yaml
src/: Makefile.am  Makefile.in  glances.py
stylesheets/: stylesheet.css
test/: glances_test.py
tests/: HOW_TO_TEST_MCP.md  conftest.py  test_action_base_v5.py  test_action_shell_v5.py  test_actions_sanitize.py  test_alerts_v5.py  test_amp_secure_popen.py  test_api.py  test_browser_restful.py  test_browser_tui.py  test_cli_v5.py  test_config_v5.py  test_core.py  test_cpu_sampler_v5.py  test_curses_formatters_v5.py  test_curses_renderer_v5.py  test_curses_v5.py  test_duckdb_sanitize.py  test_export_clickhouse.sh  test_export_csv.sh  test_export_duckdb.sh  test_export_influxdb.sh  test_export_influxdb_v1.sh  test_export_influxdb_v3.sh  test_export_json.sh  test_export_nats.sh  test_export_prometheus.sh  test_export_timescaledb.sh  test_glances_curses.py  test_glances_stats.py  test_influxdb.sh  test_json_serializer.py  test_main_v5.py  test_mcp.py  test_mcp_adapter_v5.py  test_memoryleak.py  test_outdated.py  test_perf.py  test_plugin_base_v5.py  test_plugin_core_v5.py  (+55 more)
(+725 files in other folders)
