dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(Glances, 1.1.2, , glances)

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AM_PATH_PYTHON([2.6])

dnl AX_PYTHON_MODULE([statgrab],[needed])





AC_OUTPUT([
Makefile
src/Makefile

])
